--- a/.env
+++ b/.env
@@ -1,2 +1,2 @@
 VUE_APP_ENV_ENV=local
-VUE_APP_ENV_HACKER_NEWS_API_BASE_URL=https://hacker-news.firebaseio.com/v0/
+VITE_BASE_URL=https://hacker-news.firebaseio.com/v0/
